--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>FUSION CHESS</title>
   <link rel="stylesheet" href="css/index.css">
   <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet'>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
 
@@ -41,9 +44,9 @@
       </div>
     </div>
     <div class="row">
-      <div class="square" id="square3"><img src="/Pictures/content.png">
+      <a href="/content.html"><div class="square" id="square3"><img src="/Pictures/content.png">
         <p>Content</p>
-      </div>
+      </div></a>
       <div class="square" id="square4"><img src="/Pictures/start learning.png">
         <p>Start Learning</p>
       </div>
@@ -164,10 +167,16 @@
         </div>
     </div>
   </div>
+  
+<h2>GAME OF THE DAY</h2>
+  <div id="game-of-the-day">
+    <iframe width=500 height=550 src="https://lichess.org/study/embed/83q1mVT2/xrsALoyF" frameborder=0></iframe>  
+    </div>
+    <div class="line">  
+    </div>
 </section>
 
-
-  <!--Start of Tawk.to Script-->
+<!--Start of Tawk.to Script-->
   <script type="text/javascript">
     var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
     (function () {
