--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   
 <h2>GAME OF THE DAY</h2>
   <div id="game-of-the-day">
-    <iframe width=500 height=550 src="https://lichess.org/study/embed/83q1mVT2/xrsALoyF" frameborder=0></iframe>  
+    <iframe width=450 height=600 src="https://lichess.org/embed/game/rRm3VVRx?theme=auto&bg=auto#0" frameborder=0></iframe>  
     </div>
     <div class="line">  
     </div>
