--- a/about.html
+++ b/about.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us</title>
+  <title>ABOUT US</title>
   <link rel="stylesheet" href="/css/about.css">
 </head>
 
 <body>
-
   <header>
+    <img src="/Pictures/chess-war.png" alt="">
     <nav>
       <ul class="navbar">
         <li><a href="index.html">HOME</a></li>
@@ -18,18 +18,55 @@
         <li><a href="services.html">SERVICES</a></li>
         <li><a href="contact.html">CONTACT US</a></li>
         <li><a href="socials.html">SOCIALS</a></li>
-        
-        <div class="button">
-          <li><a href="signIN.html">SIGN IN</a></li>
-        </div>
+        <li><a href="">TOURNAMENTS</a></li>
       </ul>
     </nav>
   </header>
- <div class="about">
-  <img src="/Pictures/about.png">
- </div>
 
+  <div class="container-1">
+    <div class="rectangle" id="rectangle-1"><img src="/Pictures/winni.png" alt="">
+      <p>WHAT IS FUSION CHESS?</p>
+      <div class="answer">
+        Fusion Chess is an ed tech startup revolutionizing chess education. We offer comprehensive lessons and tools for
+        players to improve their skills. Our platform provides personalized feedback, and a vibrant community. Unlock
+        your chess potential with Fusion Chess
+      </div>
+    </div>
+    <div class="rectangle" id="rectangle-2"><img src="/Pictures/cindrella.png" alt="">
+      <p>WHAT MADE US FALL <br>IN LOVE WITH CHESS</p>
+      <div class="answer">
+        During the peak of the Covid lockdown, as teenagers, we found ourselves spending countless hours online,
+        engrossed in the world of chess. It was only during this time that we stumbled upon the captivating chess boom
+        commonly known as the "Samay Raina Chess Boom" featuring the renowned stand-up comedian and International
+        Master, Sagar Shah. The electrifying combination of their comedy and expertise brought chess to life in an
+        entirely new way. We were captivated by the game's strategic depth, intellectual challenge, and the sense of
+        community it fostered<br>
 
+        
+      </div>
+    </div>
+  </div>
+
+  <hr>
+  <div class="container-2">
+    <div class="rectangle" id="rectangle-3"><img src="/Pictures/runner.png" alt="">
+      <p>HOW DID IT ALL START?</p>
+      <div class="answer">
+        This love for chess ignited our entrepreneurial spirit, inspiring us to create Fusion Chess, an ed tech platform
+        that shares our passion and enables others to fall in love with chess just like we did
+        <br>
+        We love chess and we want people to love chess sooo here we are with Fusion Chess <br>
+        Damn that rhymed <br>
+        &#58; &#41;
+      </div>
+    </div>
+    <div class="rectangle" id="rectangle-4"><img src="/Pictures/mission.png" alt="">
+      <p>WHAT&apos;S OUR GOAL/MISSION</p>
+      <div class="answer">
+        Our goal/mission is to make learning chess as fun and efficient as possible
+      </div>
+    </div>
+  </div>
 
 </body>
 
