--- a/contact.html
+++ b/contact.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CONTACT US</title>
+    <title>Contact Us</title>
     <link rel="stylesheet" href="/css/contact.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montagu+Slab:opsz@16..144&family=Passion+One:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
     <header>
+        <img src="/Pictures/chess-war.png" alt="Fusion Chess">
         <nav>
             <ul class="navbar">
                 <li><a href="index.html">HOME</a></li>
@@ -21,23 +21,18 @@
                 <li><a href="services.html">SERVICES</a></li>
                 <li><a href="contact.html">CONTACT US</a></li>
                 <li><a href="socials.html">SOCIALS</a></li>
-
-                <div class="button">
-                    <li><a href="signIN.html">SIGN IN</a></li>
-                </div>
+                <li><a href="">TOURNAMENTS</a></li>
             </ul>
         </nav>
     </header>
 
-    <h2><img src="/Pictures/fusion only.png" alt="fusiom logo"></h2>
-    <h1>CONTACT US</h1>
-    
-    <div id="contact-us-form">
+    <section id="grey-bg">
+        <div id="contact-us-form">
         <iframe
             src="https://docs.google.com/forms/d/e/1FAIpQLSfPkhsQT8Kq5-Al-Uf-f4jmjcRFD_2HtPrzB0a4ebIlGkPyxA/viewform?embedded=true"
-            width="700" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-    </div>
-
+            width="640" height="985" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        </div>
+    </section>
 </body>
 
 </html>
