--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FUSION CHESS</title>
-  <link rel="stylesheet" href="css/index.css">
-  <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet'>
+  <title>Welcome to Fusion Chess</title>
+  <link rel="stylesheet" href="/css/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700&display=swap" rel="stylesheet">
-
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montagu+Slab:opsz@16..144&family=Passion+One:wght@400;700&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
-  <!-- Navigation bar markup -->
   <header>
+    <img src="/Pictures/chess-war.png" alt="">
     <nav>
       <ul class="navbar">
         <li><a href="index.html">HOME</a></li>
@@ -23,136 +23,126 @@
         <li><a href="services.html">SERVICES</a></li>
         <li><a href="contact.html">CONTACT US</a></li>
         <li><a href="socials.html">SOCIALS</a></li>
-
-        <div class="button">
-          <li><a href="signIN.html">SIGN IN</a></li>
-        </div>
+        <li><a href="">TOURNAMENTS</a></li>
       </ul>
     </nav>
   </header>
 
-  <!-- FUSION CHESS HEADING -->
-  <section id="section-1">
-  <h1 id="fusion-chess"><a href="http://fusionchess.free.nf/"><img src="/Pictures/fusion chess.png"></a></h1>
   <div class="container">
-    <div class="row">
-      <div class="square" id="square1"><img src="/Pictures/join as a tutor.png">
-        <p>Join as a Tutor</p>
-      </div>
-      <div class="square" id="square2"><img src="/Pictures/looking for a coach.png">
-        <p>Looking for a Coach</p>
-      </div>
+    <div class="box" id="box-1"><img src="/Pictures/join as a tutor.png" alt="">
+      <p>Join as<br> a Tutor</p>
     </div>
-    <div class="row">
-      <a href="/content.html"><div class="square" id="square3"><img src="/Pictures/content.png">
+    <div class="box" id="box-2"><img src="/Pictures/looking for a coach.png" alt="">
+      <p>Looking<br> &nbsp;&nbsp;&nbsp;for a<br>&nbsp;&nbsp;Coach</p>
+    </div>
+    <a href="content.html">
+      <div class="box" id="box-3"><img src="/Pictures/content.png" alt="">
         <p>Content</p>
-      </div></a>
-      <div class="square" id="square4"><img src="/Pictures/start learning.png">
-        <p>Start Learning</p>
       </div>
+    </a>
+    <div class="box" id="box-4"><img src="/Pictures/start learning.png" alt="">
+      <p>&nbsp;&nbsp;&nbsp;Start<br>Learning</p>
     </div>
   </div>
-</section>
-<section id="section-2">
-  <h1 id="featured-videos">Featured Videos</h1>
-  <div id="slider"style="height: 100%; overflow-x: hidden; text-align: center; padding-top: 1vh;">
-    <div class="csslider infinity" id="slider1">
-    <input type="radio" name="slides" checked="checked" id="slides_1"/>
-    <input type="radio" name="slides" id="slides_2"/>
-    <input type="radio" name="slides" id="slides_3"/>
-    <input type="radio" name="slides" id="slides_4"/>
-    <input type="radio" name="slides" id="slides_5"/>
-    <input type="radio" name="slides" id="slides_6"/>
-    <input type="radio" name="slides" id="slides_7"/>
-    <input type="radio" name="slides" id="slides_8"/>
-    <input type="radio" name="slides" id="slides_9"/>
-    <input type="radio" name="slides" id="slides_10"/>
-      <ul>
-        <li>
-       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/KnmVAWplY0E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          </p>
-        </li>
-        <li>
-          <p>
-          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/TyzrffJyvNo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          </p>
-        </li>
-        <li>
-          <p>
-          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/DNweVuwPOWE?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          </p>
-        </li>
-        <li>
-          <p>
-          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/2HtzSQAZhPI?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          </p>
-        </li>
-        <li>
-                <p>
-          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/m6vjf8YyhTA?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          </p>
-        </li>
-        <li>
-          <p>
-                <p>
-          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/_PZargVQ0A8?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          </p>
-        </li>
-        <li>
-          <p>
-                              <p>
-          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/IMBHiRmRnfc?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          </p>
-        </li>
-        <li>
-          <p>
-                              <p>
-          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/9ibsHRq3CWI?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          </p>
-        </li>
-        <li>
-          <p>
-                              <p>
-          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/0AerErHz9fA?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          </p>
-        </li>
-        <li>
-          <p>
-                                      <p>
-          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/8yNVISc-B0k?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          </p>
-        </li>
-        <li>
-          <p>
-          <video controls preload>
-          <source src="" />
-          </video> 
-          </p>
-        </li>
-        <li>
-          <p>
-          <video controls preload>
-          <source src="" />
-          </video> 
-          </p>
-        </li>
-      </ul>
-        <div class="arrows">
-          <label for="slides_1"></label>
-          <label for="slides_2"></label>
-          <label for="slides_3"></label>
-          <label for="slides_4"></label>
-          <label for="slides_5"></label>
-          <label for="slides_6"></label>
-          <label for="slides_7"></label>
-          <label for="slides_8"></label>
-          <label for="slides_9"></label>
-          <label for="slides_10"></label>
-          <label class="goto-first" for="slides_1"></label>
-          <label class="goto-last" for="slides_10"></label>
-        </div>
-        <div class="navigation"> 
-          <div>
+
+  <!-- From here Featured Tab Starts -->
+  <div id="section-1">
+    <div class="featured">
+      <h1 id="featured-tab">FEATURED TAB</h1>
+
+      <div style="height: 100%; overflow-x: hidden; text-align: center">
+        <div class="csslider infinity" id="slider1">
+          <input type="radio" name="slides" checked="checked" id="slides_1" />
+          <input type="radio" name="slides" id="slides_2" />
+          <input type="radio" name="slides" id="slides_3" />
+          <input type="radio" name="slides" id="slides_4" />
+          <input type="radio" name="slides" id="slides_5" />
+          <input type="radio" name="slides" id="slides_6" />
+          <input type="radio" name="slides" id="slides_7" />
+          <input type="radio" name="slides" id="slides_8" />
+          <input type="radio" name="slides" id="slides_9" />
+          <input type="radio" name="slides" id="slides_10" />
+          <ul>
+            <li>
+              <iframe width="100%" height="100%" src="https://www.youtube.com/embed/LjZAG22S_AE?rel=0" frameborder="0"
+                allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              </p>
+            </li>
+            <li>
+              <p>
+                <iframe width="100%" height="400px" src="https://www.youtube.com/embed/TghPPv7ioX8?rel=0"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              </p>
+            </li>
+            <li>
+              <p>
+                <iframe width="100%" height="400px" src="https://www.youtube.com/embed/DNweVuwPOWE?rel=0"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              </p>
+            </li>
+            <li>
+              <p>
+                <iframe width="100%" height="400px" src="https://www.youtube.com/embed/2HtzSQAZhPI?rel=0"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              </p>
+            </li>
+            <li>
+              <p>
+                <iframe width="100%" height="400px" src="https://www.youtube.com/embed/m6vjf8YyhTA?rel=0"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              </p>
+            </li>
+            <li>
+              <p>
+              <p>
+                <iframe width="100%" height="400px" src="https://www.youtube.com/embed/_PZargVQ0A8?rel=0"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              </p>
+            </li>
+            <li>
+              <p>
+              <p>
+                <iframe width="100%" height="400px" src="https://www.youtube.com/embed/IMBHiRmRnfc?rel=0"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              </p>
+            </li>
+            <li>
+              <p>
+              <p>
+                <iframe width="100%" height="400px" src="https://www.youtube.com/embed/9ibsHRq3CWI?rel=0"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              </p>
+            </li>
+            <li>
+              <p>
+              <p>
+                <iframe width="100%" height="400px" src="https://www.youtube.com/embed/0AerErHz9fA?rel=0"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              </p>
+            </li>
+            <li>
+              <p>
+              <p>
+                <iframe width="100%" height="400px" src="https://www.youtube.com/embed/8yNVISc-B0k?rel=0"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              </p>
+            </li>
+            <li>
+              <p>
+                <video controls preload>
+                  <source src="" />
+                </video>
+              </p>
+            </li>
+            <li>
+              <p>
+                <video controls preload>
+                  <source src="" />
+                </video>
+              </p>
+            </li>
+          </ul>
+          <div class="arrows">
             <label for="slides_1"></label>
             <label for="slides_2"></label>
             <label for="slides_3"></label>
@@ -163,35 +153,45 @@
             <label for="slides_8"></label>
             <label for="slides_9"></label>
             <label for="slides_10"></label>
+            <label class="goto-first" for="slides_1"></label>
+            <label class="goto-last" for="slides_10"></label>
+          </div>
+          <div class="navigation">
+            <div>
+              <label for="slides_1"></label>
+              <label for="slides_2"></label>
+              <label for="slides_3"></label>
+              <label for="slides_4"></label>
+              <label for="slides_5"></label>
+              <label for="slides_6"></label>
+              <label for="slides_7"></label>
+              <label for="slides_8"></label>
+              <label for="slides_9"></label>
+              <label for="slides_10"></label>
+            </div>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div id="game-of-the-day">
+      <h1 class="h-primary center">Game of The Day</h1>
+      <img src="/Pictures/gamr-of-the-day.gif" alt="Game of the Day">
     </div>
   </div>
-  
-<h2>GAME OF THE DAY</h2>
-  <div id="game-of-the-day">
-    <iframe width=450 height=600 src="https://lichess.org/embed/game/rRm3VVRx?theme=auto&bg=auto#0" frameborder=0></iframe>  
-    </div>
-    <div class="line">  
-    </div>
-</section>
 
-<!--Start of Tawk.to Script-->
-  <script type="text/javascript">
-    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-    (function () {
-      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-      s1.async = true;
-      s1.src = 'https://embed.tawk.to/64abe99794cf5d49dc62a1ae/1h4vogu67';
-      s1.charset = 'UTF-8';
-      s1.setAttribute('crossorigin', '*');
-      s0.parentNode.insertBefore(s1, s0);
-    })();
-  </script>
-  
-  <!--End of Tawk.to Script-->
+  <div id="section-2">
+    <div class="blog-home">
+      <a href=""><img src="/Pictures/rise-of-new-india-1.png" alt=""></a>
+    </div>
+    <div class="daily-puzzle">
+      <div id="puzzle-collection">
+        <h1 class="h-primary center">PUZZLE OF THE DAY</h1>
+        <iframe style="width: 615px; height: 420px;" src="https://www.chess.com/daily_puzzle" frameborder="0"></iframe>
+      </div>
+    </div>
+  </div>
 
-  <script src="scripts/chess_puzzles.js"></script>
 </body>
 
 </html>
