--- a/socials.html
+++ b/socials.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Social Media Handles</title>
-    <link rel="stylesheet" href="css/socials.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Our Social Media Handles</title>
+  <link rel="stylesheet" href="/css/socials.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montagu+Slab:opsz@16..144&family=Passion+One:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-     <!-- Navigation bar markup -->
   <header>
+    <img src="/Pictures/chess-war.png" alt="">
     <nav>
       <ul class="navbar">
         <li><a href="index.html">HOME</a></li>
@@ -16,15 +19,23 @@
         <li><a href="services.html">SERVICES</a></li>
         <li><a href="contact.html">CONTACT US</a></li>
         <li><a href="socials.html">SOCIALS</a></li>
-        
-        <div class="button">
-          <li><a href="signIN.html">SIGN IN</a></li>
-        </div>
-      </ul>
+        <li><a href="">TOURNAMENTS</a></li>
+     </ul>
     </nav>
-  </header>
-  <a href="https://www.instagram.com/fusionchess/"><input type="button" id="instagram"></a>
-  <a href="https://www.youtube.com/@FusionChess"><input type="button" id="youtube"></a>
-  <a href=""><input type="button" id="discord"></a>
+</header>
+
+<div class="container-icons">
+  <div class="icons"><a href="https://www.instagram.com/fusionchess/"><img src="/Pictures/instagram-socials.png" alt="Instagram"></a></div>
+  <div class="icons"><a href="https://www.youtube.com/@FusionChess"><img src="/Pictures/youtube-socials.png" alt="YouTube"></a></div>
+  <div class="icons"><a href="https://discord.gg/KW5Y35zGQT"><img src="/Pictures/discord-socials.png" alt="Discord"></a></div>
+</div>
+
+<div class="container-text">
+  <div class="text"><p>fusionchess</p></div>
+  <div class="text"><p>fusionchess</p></div>
+  <div class="text"><p>fusionchess</p></div>
+</div>
+
+<h1 id="email">fusionchess64@gmail.com</h1>
 </body>
 </html>
