--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
           <input type="radio" name="slides" id="slides_10" />
           <ul>
             <li>
-              <iframe width="100%" height="100%" src="https://www.youtube.com/embed/LjZAG22S_AE?rel=0" frameborder="0"
-                allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              <iframe width="100%" height="400px" src="https://www.youtube.com/embed/KnmVAWplY0E"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
               </p>
             </li>
             <li>
