--- a/index.html
+++ b/index.html
@@ -19,30 +19,20 @@
     <nav>
       <ul class="navbar">
         <li><a href="index.html">HOME</a></li>
-        <li><a href="about.html">ABOUT</a></li>
-        <li><a href="services.html">SERVICES</a></li>
-        <li><a href="contact.html">CONTACT US</a></li>
-        <li><a href="socials.html">SOCIALS</a></li>
-        <li><a href="">TOURNAMENTS</a></li>
+        <li><a href="services.html">ABOUT</a></li>
+        <li><a href="about.html">SERVICES</a></li>
+        <li><a href="socials.html">CONTACT US</a></li>
+        <li><a href="contact.html">SOCIALS</a></li>
+        <li><a href="tournaments.html">TOURNAMENTS</a></li>
       </ul>
     </nav>
   </header>
 
   <div class="container">
-    <div class="box" id="box-1"><img src="/Pictures/join as a tutor.png" alt="">
-      <p>Join as<br> a Tutor</p>
-    </div>
-    <div class="box" id="box-2"><img src="/Pictures/looking for a coach.png" alt="">
-      <p>Looking<br> &nbsp;&nbsp;&nbsp;for a<br>&nbsp;&nbsp;Coach</p>
-    </div>
-    <a href="content.html">
-      <div class="box" id="box-3"><img src="/Pictures/content.png" alt="">
-        <p>Content</p>
-      </div>
-    </a>
-    <div class="box" id="box-4"><img src="/Pictures/start learning.png" alt="">
-      <p>&nbsp;&nbsp;&nbsp;Start<br>Learning</p>
-    </div>
+    <a href=""><img src="/Pictures/join-as-a-tutor-button.png" alt="Join as a Tutor"></a>
+    <a href=""><img src="/Pictures/looking-for-a-coach-button.png" alt="Looking for a Coach"></a>
+    <a href="content.html"><img src="/Pictures/conetnt button.png" alt="Content"></a>
+    <a href=""><img src="/Pictures/start-learing-button.png" alt="Start Learning"></a>
   </div>
 
   <!-- From here Featured Tab Starts -->
@@ -193,6 +183,9 @@
       </div>
     </div>
   </div>
+  <iframe id="10920849" allowtransparency="true" frameborder="0" style="width:20%;border:none;"
+    src="//www.chess.com/emboard?id=10920849"></iframe>
+  <script>window.addEventListener("message", e => { e['data'] && "10920849" === e['data']['id'] && document.getElementById(`${e['data']['id']}`) && (document.getElementById(`${e['data']['id']}`).style.height = `${e['data']['frameHeight'] + 30}px`) });</script>
 
 </body>
 
