--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <li><a href="services.html">SERVICES</a></li>
         <li><a href="contact.html">CONTACT US</a></li>
         <li><a href="socials.html">SOCIALS</a></li>
-        <li><a href="">TOURNAMENTS</a></li>
+        <li><a href="tournaments.html">TOURNAMENTS</a></li>
       </ul>
     </nav>
   </header>
@@ -42,7 +42,7 @@
         entirely new way. We were captivated by the game's strategic depth, intellectual challenge, and the sense of
         community it fostered<br>
 
-        
+
       </div>
     </div>
   </div>
@@ -68,6 +68,23 @@
     </div>
   </div>
 
+  <hr>
+  <h1 id="founders">FOUNDERS</h1>
+  <div class="founder-pics">
+    <img src="/Pictures/kapil-photo.png" alt="Kapil Mohan Sarangi">
+    <img src="/Pictures/sahil-photo.png" alt="Sahil Arora">
+  </div>
+  <div class="text-box-container">
+    <div class="text-box" id="kapil-text-box">
+      <p>Kapil Mohan Sarangi : founder and CEO of Fusion Chess, a student and a chess enthusiast</p>
+
+    </div>
+    <div class="text-box" id="sahil-text-box">
+      <p>Sahil Arora : Co-founder and CTO of Fusion Chess, a student and a chess lover</p>
+    </div>
+  </div>
+
+  <div class="vertical-line"></div>
 </body>
 
 </html>
